--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command = "npm run build"
-  publish="path-to-react-app/build"
-  base = "path-to-react-app"
+  command = "yarn run build"
+  publish="/build"
+  base = "/src"
 
 [[redirects]]
   from = "/*"
